Syntax confusion in upload-% test
An error in the test inside the upload-% was caused by the use of double
== and prevented any debian version from being uploaded (in fact it
would have used the Ubuntu method even for Debian). The operator used
should be =

--- a/Makefile.stage2
+++ b/Makefile.stage2
@@ -20,6 +20,6 @@ $(DSC_FILE):
 .PHONY: upload-*
 upload-%: $(DSC_FILE)
 	@echo "INFO: Uploading package for $*"
-	[ "x$*" == "xunstable" -o "x$*" == "xtesting" -o "x$*" == "xstable" ] && \
+	[ "x$*" = "xunstable" -o "x$*" = "xtesting" -o "x$*" = "xstable" ] && \
 		echo "TODO: add upload method to debian" || \
 		dput $(UB_REPOS_URL) $(DSC_FILE:.dsc=_source.changes)
