Change default target for stage2
Having to expand $(DISTROS) in the default target in the Makefile.stage2
didn't add anything useful since the distro name is not communicated to
child rules.

Change the default target into a convenient 'all' target.

Also, add a .PHONY on the default taget.

--- a/Makefile.stage2
+++ b/Makefile.stage2
@@ -6,7 +6,8 @@ PKG_ARCH = $(shell ../../pkg-arch.sh $(SOURCE_V))
 DSC_FILE = $(PROJECT)_$(VERSION)$(PKG_V).dsc
 DEB_FILE = $(PROJECT)_$(VERSION)$(PKG_V)_$(PKG_ARCH).deb
 
-$(DISTROS): $(DEB_FILE) $(DSC_FILE)
+.PHONY: all
+all: $(DEB_FILE) $(DSC_FILE)
 
 $(DEB_FILE): $(DSC_FILE)
 	@echo "INFO: Building package file for $(DISTRO)"
