Add .PRECIOUS to avoid removal
Some files are currently treated as intermediate and are being removed
auutomatically by make.

Add .PRECIOUS target with those files as prerequisites to ask make to
leave them alone.

+ Add mkdir -p in build/%/Makefile to ensure that we can execute the
recipe in the event that make decides to run prerequisites in a
different ordering.

--- a/Makefile.stage2
+++ b/Makefile.stage2
@@ -9,6 +9,7 @@ DEB_FILE = $(PROJECT)_$(VERSION)$(PKG_V)_$(PKG_ARCH).deb
 .PHONY: all
 all: $(DEB_FILE) $(DSC_FILE)
 
+.PRECIOUS: $(DSC_FILE) $(DEB_FILE)
 $(DEB_FILE): $(DSC_FILE)
 	@echo "INFO: Building package file for $(DISTRO)"
 	sudo DIST=$(DISTRO) pbuilder build $(DSC_FILE)
